--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@ body {
   border: 10px solid white;
   box-shadow: 0px 0px 2px gray;
   background-image: url("../img/bakbaner.png");
-  background-position: -200px -200px;
+  background-position: -347px -200px;
   margin: 20px auto;
 }
 
@@ -254,13 +254,13 @@ aside h3 {
 #login input[type="password"] {
   display: block;
   margin: 0px auto;
-  width: 90%;
+  width: 82%;
   height: 30px;
   border: 1px solid #ccc;
   box-shadow: 1px 1px 1px #ccc inset;
   border-radius: 5px;
   margin-top: 20px;
-  padding-left: 10px;
+  padding-left: 35px;
   color: gray;
   transition: all 300ms;
 }
@@ -271,8 +271,75 @@ aside h3 {
   box-shadow: 1px 1px 1px grey inset;
 }
 
-#login #user {
+#login #user,
+#login #password {
   display: block;
   text-align: center;
   position: absolute;
+  margin-left: 15px;
+  margin-top: 8px;
+  height: 30px;
+}
+
+#login #password {
+  margin-left: 18px;
+  margin-top: 25px;
+  font-size: 20px;
+}
+
+#login input[type="submit"],
+#login input[type="button"],
+#login input[type="reset"],
+#login button {
+  /* display: block; */
+  text-align: center;
+  width: 100px;
+  height: 35px;
+  margin-top: 20px;
+  color: white;
+  background: linear-gradient(to bottom, #3eb8e5 0%, #2ca0ca 100%);
+  border: 1px solid #156785;
+  border-radius: 0px;
+  cursor: pointer;
+  font-size: 15px;
+  font-family: "TrebuchetMS";
+  font-weight: lighter;
+  margin-left: 15px;
+  margin-bottom: 20px;
+}
+
+#login input[type="submit"]:hover,
+#login input[type="button"]:hover,
+#login input[type="reset"]:hover,
+#login button:hover {
+  box-shadow: 0px 0px 3px gray;
+  transition: all 300ms;
+}
+
+#login a {
+  display: block;
+  font-size: 14px;
+  text-decoration: none;
+  margin-left: 18px;
+  color: #555;
+  transition: all 300ms;
+}
+
+#login a:hover {
+  text-decoration: underline;
+  color: #2f78bc;
+}
+
+#social {
+  height: 158px;
+}
+
+#social a {
+  display: block;
+  color: black;
+  text-decoration: none;
+  font-size: 30px;
+  margin-left: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
