--- a/css/styles.css
+++ b/css/styles.css
@@ -343,3 +343,22 @@ aside h3 {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+/* Articulos */
+
+#articles {
+  width: 860px;
+}
+
+#articles h2 {
+  display: block;
+  width: 100%;
+  height: 75px;
+  line-height: 75px;
+  text-align: center;
+  font-family: "BebasNeue";
+  font-size: 40px;
+  font-weight: normal;
+  letter-spacing: 2px;
+  background: url(../img/);
+}
