--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,11 @@ body {
   margin: 0px auto;
 }
 
+.clearfix {
+  float: none;
+  clear: both;
+}
+
 /* Cabezera */
 #header {
   width: 100%;
@@ -347,7 +352,8 @@ aside h3 {
 /* Articulos */
 
 #articles {
-  width: 860px;
+  width: 850px;
+  float: left;
 }
 
 #articles h2 {
@@ -360,5 +366,76 @@ aside h3 {
   font-size: 40px;
   font-weight: normal;
   letter-spacing: 2px;
-  background: url(../img/);
+  background: url(../img/pxgray.png);
+  box-shadow: 0px 1px 0px #393d3f, 1px 2px 0px #393d3f, 2px 3px 0px #393d3f,
+    3px 4px 0px #393d3f;
+  margin: 0px autp;
+  margin-top: 25px;
+}
+
+#articles article {
+  width: 98%;
+  height: auto;
+  border: 1px solid #ccc;
+  margin: 10px auto;
+  padding: 10px;
+  font-family: "TrebuchetMS";
+  background-color: white;
+  color: black;
+  box-shadow: 1px 1px 2px #ddd;
+}
+
+#articles article h4 {
+  display: block;
+  font-size: 23px;
+  margin: 3px;
+}
+
+#articles article h4 a {
+  text-decoration: none;
+  color: #00538c;
+}
+
+#articles article h4 a:hover {
+  text-decoration: underline;
+}
+
+#articles .data {
+  float: right;
+  background-color: #393d3f;
+  color: white;
+  height: 30px;
+  line-height: 30px;
+  margin: -10px;
+  padding: 4px;
+  font-size: 13px;
+  border-radius: 0px 0px 0px 3px;
+}
+
+#articles .data span {
+  margin: 6px;
+}
+
+#articles article p {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 15px;
+}
+
+#blog {
+  height: 100px;
+  margin-top: 60px;
+  line-height: 100px;
+  text-align: center;
+  font-family: "BebasNeue";
+}
+
+#blog a {
+  display: block;
+  text-transform: uppercase;
+  font-family: "BebasNeue";
+  font-size: 40px;
+  letter-spacing: 3px;
+  color: #00538c;
+  text-decoration: none;
 }
